[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/BoidCreature.gd" type="Script" id=1]
[ext_resource path="res://Sprites/BlueEye.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[node name="BoidCreature" type="Area2D"]
space_override = 1
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.25 )
texture = ExtResource( 2 )

[node name="Polygon2D" type="Polygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -8, -8, 16, 0, -8, 8 )

[node name="ObstacleDectors" type="Node2D" parent="." groups=[
"BoidCreature",
]]

[node name="LeftSensor" type="RayCast2D" parent="ObstacleDectors"]
position = Vector2( 0, -8 )
rotation = -1.5708
enabled = true
collide_with_areas = true

[node name="RightSensor" type="RayCast2D" parent="ObstacleDectors"]
position = Vector2( 0, 8 )
rotation = -1.5708
enabled = true
collide_with_areas = true

[node name="ObstacleSensors" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="ObstacleSensors"]
rotation = -2.79253
enabled = true
collide_with_areas = true

[node name="RayCast2D2" type="RayCast2D" parent="ObstacleSensors"]
rotation = -2.44346
enabled = true
collide_with_areas = true

[node name="RayCast2D3" type="RayCast2D" parent="ObstacleSensors"]
rotation = -2.0944
enabled = true
collide_with_areas = true

[node name="RayCast2D4" type="RayCast2D" parent="ObstacleSensors"]
rotation = -1.74533
enabled = true
collide_with_areas = true

[node name="RayCast2D5" type="RayCast2D" parent="ObstacleSensors"]
rotation = -1.39626
enabled = true
collide_with_areas = true

[node name="RayCast2D6" type="RayCast2D" parent="ObstacleSensors"]
rotation = -1.0472
enabled = true
collide_with_areas = true

[node name="RayCast2D7" type="RayCast2D" parent="ObstacleSensors"]
rotation = -0.698132
enabled = true
collide_with_areas = true

[node name="RayCast2D8" type="RayCast2D" parent="ObstacleSensors"]
rotation = -0.349066
enabled = true
collide_with_areas = true

[node name="EatTimer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true
autostart = true

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
[connection signal="area_entered" from="." to="." method="_on_BoidCreature_area_entered"]
[connection signal="timeout" from="EatTimer" to="." method="_on_EatTimer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer2_timeout"]
